--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@angular/material": "^20.2.12",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@ngneat/overview": "6.1.1",
+    "@ngrx/signals": "^20.1.0",
+    "@ngxpert/hot-toast": "^5.1.3",
+    "immer": "^10.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
